--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        cursor: crosshair;
       }
     </style>
   </head>
